<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_tops"
        android:icon="@drawable/ic_snowed_mountains"
        android:title="@string/title_tops" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_augmented"
        android:icon="@drawable/ic_augmented"
        android:title="@string/view" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_gears"
        android:title="@string/title_settings" />

</menu>