<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tops">

    <fragment
        android:id="@+id/navigation_tops"
        android:name="ru.irinavb.augmentedhikes.ui.tops.TopsFragment"
        android:label="@string/title_tops"
        tools:layout="@layout/fragment_tops" >
        <action
            android:id="@+id/action_navigation_tops_to_navigation_single_top"
            app:destination="@id/navigation_single_top" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="ru.irinavb.augmentedhikes.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="ru.irinavb.augmentedhikes.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="ru.irinavb.augmentedhikes.ui.settings.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_single_top"
        android:name="ru.irinavb.augmentedhikes.ui.single_top.SingleTopFragment"
        android:label="fragment_single_top"
        tools:layout="@layout/fragment_single_top" />
    <fragment
        android:id="@+id/navigation_accelerometer"
        android:name="ru.irinavb.augmentedhikes.ui.sensors.accelerometer.AccelerometerFragment"
        android:label="fragment_sensors"
        tools:layout="@layout/fragment_accelerometer" />
    <fragment
        android:id="@+id/navigation_magnetometer"
        android:name="ru.irinavb.augmentedhikes.ui.sensors.magnetometer.MagnetometerFragment"
        android:label="MagnetometerFragment" />
    <fragment
        android:id="@+id/navigation_gyroscope"
        android:name="ru.irinavb.augmentedhikes.ui.sensors.gyroscope.GyroscopeFragment"
        android:label="GyroscopeFragment" />
    <fragment
        android:id="@+id/navigation_orientation"
        android:name="ru.irinavb.augmentedhikes.ui.sensors.orientation.OrientationFragment"
        android:label="OrientationFragment" />
    <fragment
        android:id="@+id/navigation_augmented"
        android:name="ru.irinavb.augmentedhikes.ui.augmented.AugmentedFragment"
        android:label="AugmentedFragment" />
</navigation>