<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/gyroscope_main_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/cube"
            android:src="@drawable/gyroscope"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/raw_gyroscope_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/raw"
            android:textColor="@color/green_dark"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/gyroscope_main_image_view"
            app:layout_constraintStart_toStartOf="@+id/gyroscope_main_image_view"
            app:layout_constraintTop_toBottomOf="@+id/gyroscope_main_image_view"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/x_gyroscope_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/x_gyroscope"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/raw_gyroscope_label"
            app:layout_constraintStart_toStartOf="@+id/raw_gyroscope_label"
            app:layout_constraintTop_toBottomOf="@+id/raw_gyroscope_label" />

        <TextView
            android:id="@+id/y_gyroscope_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/y_gyroscope"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/x_gyroscope_value_text"
            app:layout_constraintStart_toStartOf="@+id/x_gyroscope_value_text"
            app:layout_constraintTop_toBottomOf="@+id/x_gyroscope_value_text" />

        <TextView
            android:id="@+id/z_gyroscope_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/z_gyroscope"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/y_gyroscope_value_text"
            app:layout_constraintStart_toStartOf="@+id/y_gyroscope_value_text"
            app:layout_constraintTop_toBottomOf="@+id/y_gyroscope_value_text" />

        <TextView
            android:id="@+id/x_gyroscope_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0"
            android:textSize="28sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/x_gyroscope_label_text"
            app:layout_constraintStart_toStartOf="@+id/x_gyroscope_label_text"
            app:layout_constraintTop_toBottomOf="@+id/x_gyroscope_label_text"
            tools:text="0" />

        <TextView
            android:id="@+id/y_gyroscope_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_0"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/y_gyroscope_label_text"
            app:layout_constraintStart_toStartOf="@+id/y_gyroscope_label_text"
            app:layout_constraintTop_toBottomOf="@+id/y_gyroscope_label_text"
            tools:text="0" />

        <TextView
            android:id="@+id/z_gyroscope_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0"
            android:textSize="28sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/z_gyroscope_label_text"
            app:layout_constraintStart_toStartOf="@+id/z_gyroscope_label_text"
            app:layout_constraintTop_toBottomOf="@+id/z_gyroscope_label_text"
            tools:text="0" />

        <TextView
            android:id="@+id/filtered_gyroscope_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/filtered"
            android:textColor="@color/green_dark"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/z_gyroscope_value_text"
            app:layout_constraintStart_toStartOf="@+id/z_gyroscope_value_text"
            app:layout_constraintTop_toBottomOf="@+id/z_gyroscope_value_text"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/filtered_x_gyroscope_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/x_gyroscope"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/filtered_gyroscope_text_view"
            app:layout_constraintStart_toStartOf="@+id/filtered_gyroscope_text_view"
            app:layout_constraintTop_toBottomOf="@+id/filtered_gyroscope_text_view" />

        <TextView
            android:id="@+id/filtered_x_gyroscope_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0"
            android:textSize="28sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/filtered_x_gyroscope_label_text"
            app:layout_constraintStart_toStartOf="@+id/filtered_x_gyroscope_label_text"
            app:layout_constraintTop_toBottomOf="@+id/filtered_x_gyroscope_label_text" />

        <TextView
            android:id="@+id/filtered_y_gyroscope_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/y_gyroscope"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/filtered_x_gyroscope_text"
            app:layout_constraintStart_toStartOf="@+id/filtered_x_gyroscope_text"
            app:layout_constraintTop_toBottomOf="@+id/filtered_x_gyroscope_text"/>

        <TextView
            android:id="@+id/filtered_y_gyroscope_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0"
            android:textSize="28sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/filtered_y_gyroscope_label_text"
            app:layout_constraintStart_toStartOf="@+id/filtered_y_gyroscope_label_text"
            app:layout_constraintTop_toBottomOf="@+id/filtered_y_gyroscope_label_text"/>

        <TextView
            android:id="@+id/filtered_z_gyroscope_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/z_gyroscope"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/filtered_y_gyroscope_text"
            app:layout_constraintStart_toStartOf="@+id/filtered_y_gyroscope_text"
            app:layout_constraintTop_toBottomOf="@+id/filtered_y_gyroscope_text"/>

        <TextView
            android:id="@+id/filtered_z_gyroscope_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0"
            android:textSize="28sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/filtered_z_gyroscope_label_text"
            app:layout_constraintStart_toStartOf="@+id/filtered_z_gyroscope_label_text"
            app:layout_constraintTop_toBottomOf="@+id/filtered_z_gyroscope_label_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
