<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:background="@drawable/bg_gradient_green"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tour_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="16.08.2022"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tour_walker_image_view"
        app:layout_constraintStart_toEndOf="@+id/tour_walker_image_view"
        app:layout_constraintTop_toTopOf="@+id/tour_walker_image_view"
        app:layout_constraintVertical_bias="0.56" />

    <ImageView
        android:id="@+id/tour_walker_image_view"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/icon_walker"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_hiking"
        tools:ignore="UseAppTint" />

    <ImageView
        android:id="@+id/time_image_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/icon_clock"
        android:tint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/tour_date_text_view"
        app:layout_constraintStart_toStartOf="@+id/tour_walker_image_view"
        app:layout_constraintTop_toBottomOf="@+id/tour_walker_image_view"
        app:srcCompat="@drawable/ic_stop_watch"
        tools:ignore="UseAppTint" />

    <TextView
        android:id="@+id/tour_time_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="20:35"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/time_image_view"
        app:layout_constraintStart_toEndOf="@+id/time_image_view"
        app:layout_constraintTop_toTopOf="@+id/time_image_view" />

    <TextView
        android:id="@+id/distance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="8dp"
        android:text="1km 2m"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/tour_time_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tour_time_image_view"
        app:layout_constraintTop_toTopOf="@+id/tour_time_image_view" />

    <ImageView
        android:id="@+id/distance_image_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/distance_icon"
        android:tint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/distance_text_view"
        app:layout_constraintEnd_toEndOf="@+id/distance_text_view"
        app:layout_constraintStart_toStartOf="@+id/distance_text_view"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_distance"
        tools:ignore="UseAppTint" />
</androidx.constraintlayout.widget.ConstraintLayout>


